opam-version: "2.0"
name: "imandra-document"
synopsis: "Imandra document library"
version: "1.0.7"
maintainer: "Grant Passmore <grant@aestheticintegration.com>"
authors: "Grant Passmore <grant@aestheticintegration.com>"
homepage: "http://www.imandra.ai/"
bug-reports: "Grant Passmore <grant@aestheticintegration.com>"
dev-repo: "git://github.com/AestheticIntegration/imandra-document.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" { >= "1.1" }
  "containers" { >= "3.3" & < "4.0" }
  "zarith"
  "ocaml" { >= "4.08" }
]
depopts: [
  "octavius"
  "tyxml"
]
